manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-nextjs
  labels:
    app: hello-world-nextjs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world-nextjs
  template:
    metadata:
      labels:
        app: hello-world-nextjs
        deploymentconfig: hello-world-nextjs
    spec:
      containers:
        - name: hello-world-nextjs
          image: owaiskhan84/nextjsp:latest  # Update to your Docker Hub repo
          ports:
            - containerPort: 3000  # Assuming your app runs on port 3000
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
