manifests/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: hello-world-nextjs-svc
  labels:
    app: hello-world-nextjs
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app: hello-world-nextjs
    deploymentconfig: hello-world-nextjs
  type: ClusterIP
