manifests/route.yaml
kind: Route
apiVersion: github.com/openshift/api/route/v1
metadata:
  name: hello-world-nextjs-route
  namespace: webapps
  labels:
    app: hello-world-nextjs
spec:
  to:
    kind: Service
    name: hello-world-nextjs-svc  # Ensure this service exists
  port:
    targetPort: 3000  # Make sure the service exposes this port
  wildcardPolicy: None
